--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build": "tsc",
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\""
+    "build": "rollup -c --compact",
+    "dev": "rollup -c -w"
   },
   "keywords": [],
   "author": "",
@@ -14,5 +15,12 @@
     "@types/node": "^18.15.11",
     "tsc-watch": "^6.0.0",
     "typescript": "^5.0.4"
+  },
+  "devDependencies": {
+    "@rollup/plugin-run": "^3.0.1",
+    "@rollup/plugin-typescript": "^11.1.0",
+    "nodemon": "^2.0.22",
+    "rollup": "^3.20.4",
+    "tslib": "^2.5.0"
   }
 }
