--- a/package.json
+++ b/package.json
@@ -1,26 +1,22 @@
 {
-  "name": "typescript-app-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type": "module",
-  "scripts": {
-    "build": "rollup -c --compact",
-    "dev": "rollup -c -w"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@types/node": "^18.15.11",
-    "tsc-watch": "^6.0.0",
-    "typescript": "^5.0.4"
-  },
-  "devDependencies": {
-    "@rollup/plugin-run": "^3.0.1",
-    "@rollup/plugin-typescript": "^11.1.0",
-    "nodemon": "^2.0.22",
-    "rollup": "^3.20.4",
-    "tslib": "^2.5.0"
-  }
+    "name": "typescript-app-template",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "build": "rollup -c --compact",
+        "dev": "rollup -c -w"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {},
+    "devDependencies": {
+        "@rollup/plugin-run": "^3.0.1",
+        "@rollup/plugin-typescript": "^11.1.0",
+        "@types/node": "^18.15.11",
+        "rollup": "^3.20.4",
+        "tslib": "^2.5.0"
+    }
 }
