--- a/package.json
+++ b/package.json
@@ -6,16 +6,18 @@
     "type": "module",
     "scripts": {
         "build": "rollup -c --compact",
-        "dev": "rollup -c -w"
+        "dev": "rollup -c -w",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
-    "dependencies": {},
     "devDependencies": {
         "@rollup/plugin-run": "^3.0.1",
         "@rollup/plugin-typescript": "^11.1.0",
+        "@types/jest": "^29.5.0",
         "@types/node": "^18.15.11",
+        "jest": "^29.5.0",
         "rollup": "^3.20.4",
         "tslib": "^2.5.0"
     }
