Feat: Now this base project is able to transpile for all destinations

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,10 +5,12 @@
             "@/*": ["src/*"]
         },
         "esModuleInterop": true,
-        "strict": true
+        "strict": true,
+        "declaration": true,
+        "declarationDir": "dist"
     },
     "include": [
-        "src/**/*"
+        "src/**/*.ts"
     ],
     "exclude": [
         "src/**/*.test.ts",
