--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
         "@types/node": "^18.15.11",
         "jest": "^29.5.0",
         "rollup": "^3.20.4",
+        "ts-jest": "^29.1.0",
+        "ts-node": "^10.9.1",
         "tslib": "^2.5.0"
     }
 }
