--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "type": "module",
     "scripts": {
         "build": "rollup -c",
-        "dev": "rollup -c -w"
+        "dev": "rollup -c -w",
+        "lint": "eslint src --ext .ts"
     },
     "keywords": [],
     "author": "",
@@ -20,6 +21,9 @@
         "@rollup/plugin-terser": "^0.4.1",
         "@rollup/plugin-typescript": "^11.1.0",
         "@types/node": "^18.15.11",
+        "@typescript-eslint/eslint-plugin": "^5.59.0",
+        "@typescript-eslint/parser": "^5.59.0",
+        "eslint": "^8.38.0",
         "rollup": "^3.20.4",
         "tslib": "^2.5.0"
     }
