--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@rollup/plugin-typescript": "^11.1.0",
         "@types/node": "^18.15.11",
         "rollup": "^3.20.4",
-        "tslib": "^2.5.0"
+        "tslib": "^2.5.0",
+        "typescript": "^5.0.4"
     }
 }
