--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@typescript-eslint/parser": "^5.59.0",
         "eslint": "^8.38.0",
         "rollup": "^3.20.4",
-        "tslib": "^2.5.0"
+        "tslib": "^2.5.0",
+        "typescript": "^5.1.6"
     }
 }
